--- a/newFolder/project/index.html
+++ b/newFolder/project/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Class List</title>
-<meta charset="utf-8" />
-</head>
-<body>
-<h1>Students in the School of EIE:</h1>
-</body>
+    <head>
+        <title>Class List</title>
+        <meta charset="utf-8" />
+        <script defer src="index.js"></script>
+    </head>
+    <body>
+        <h1 id="heading">Students in the School of EIE:</h1>
+        <button type="button" id="addButton">Add</button>
+        <div id="studentList"></div>
+    </body>
 </html>
