Adding element second

--- a/newFolder/project/index.html
+++ b/newFolder/project/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1 id="heading">Students in the School of EIE:</h1>
         <button type="button" id="addButton">Add</button>
+        <button type="button" id="myButton">Add</button>
         <div id="studentList"></div>
     </body>
 </html>
